--- a/assets/scss/home-user.scss
+++ b/assets/scss/home-user.scss
@@ -315,6 +315,7 @@ body {
 
 .about {
   margin-bottom: 6rem;
+  overflow-x: hidden;
 
   .section-title {
     margin: 0 auto 5.375rem auto;
@@ -497,7 +498,7 @@ body {
 
 .features {
   padding-bottom: 6rem;
-
+  overflow-x: hidden;
   .bg-wrapper {
     top: 50%;
     left: 50%;
@@ -610,6 +611,7 @@ body {
 
 .how-it-works {
   padding-bottom: 6rem;
+  overflow-x: hidden;
 
   .section__above-title {
     text-align: center;
@@ -714,6 +716,7 @@ body {
 
 .plans {
   padding-bottom: 6rem;
+  overflow-x: hidden;
 
   .wrapper {
     background: #272625;
@@ -807,7 +810,7 @@ body {
 
 .section-support {
   padding-bottom: 3rem;
-
+  overflow-x: hidden;
   .section__above-title {
     text-align: center;
   }
